# libaudio

./: CMakeLists.txt
include/libaudio/: libaudio.hpp  player.hpp
include/libaudio/detail/: guard.hpp
src/: CMakeLists.txt  libaudio.cpp  player.cpp
src/apple/: player_impl.mm
tests/: CMakeLists.txt  player.cpp
